--- a/templates/myprojects/index.html
+++ b/templates/myprojects/index.html
@@ -1,4 +1,5 @@
 {% extends "index.html" %}
+{% load markup %}
 
 {% block css %}
 {{ block.super }}
@@ -21,7 +22,7 @@
         <div class="project-body">
             <div class="name"><a href="{{obj.get_absolute_url}}">{{obj.title}}</a></div>
             <div class="time">{{ obj.time|date:"M d, Y"}}</div>
-            <div class="desc">{{ obj.short_desc }}</div>
+            <div class="desc">{{ obj.short_desc|restructuredtext }}</div>
         </div>
     </div>
     {% endfor %}
