--- a/media/menu.css
+++ b/media/menu.css
@@ -10,10 +10,11 @@
     padding:0px;
     background-color:white;
     border:1px solid #FDB813;
+    text-align:center;
 }
 
 #menu li.menu-item {
-    padding:2px 0;
+    padding:4px 10px;
 }
 
 #menu li.menu-item.selected {
@@ -24,16 +25,15 @@
     background-color:#bbb;
 }
 
-#menu li a {
-    padding:2px 10px;
+#menu a li {
     color:#999;
     text-transform:lowercase;
 }
 
-#menu li.menu-item.selected a {
+#menu a li.menu-item.selected {
     color:white;
 }
 
-#menu li.menu-item:hover a {
+#menu a li.menu-item:hover {
     color:white;
 }
