--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,11 @@
         {% block css %}
         <link href="/media/index.css" rel="stylesheet"/>
         <link href="/media/menu.css" rel="stylesheet"/>
+        <link href="/media/pygments.css" rel="stylesheet"/>
         {% endblock %}
+
+        {% load markup %}
+
         {% block js %}
         <script src="/media/index.js"></script>
         {% endblock %}
