--- a/media/menu.css
+++ b/media/menu.css
@@ -1,7 +1,14 @@
 #menu {
+    /*
     position:fixed;
     right:20px;
     top:20px;
+    */
+    left: 50%;
+    margin-left: 260px;
+    margin-top: -155px;
+    position:absolute;
+    top: 50%;
 }
 
 #menu ul.menu-top {
