getting everything working

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
             <h1>{% block h1 %}{% endblock %}</h1>
         </div-->
         <div id="main">
+            HELLO
             <div id="smalltitle">
                 {% block smalltitle %}{% if title %}{{ title }}{% endif %}{% endblock %}
             </div>
