--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,15 @@
         </div>
         {% include "menu.html" %}
         {% include "feedback/button.html" %}
+        <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+        <script type="text/javascript">
+            try {
+                var pageTracker = _gat._getTracker("UA-7002862-4");
+                pageTracker._trackPageview();
+                } catch(err) {}</script>
     </body>
 </html>
 
