--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,8 @@
-<html>
-    <title> Hello </title>
+{% extends "index.html" %}
 
-    <body> Some stuff </body>
+{% block title %}Page Not Found{%endblock %}
+{% block content_title %}Page not found{% endblock %}
+{% block content %}
+    Sorry, I couldn't find that page... Try <a href="/">the home page</a>
+{% endblock %}
 
-</html>
