--- a/templates/base.html
+++ b/templates/base.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-    <head>
-        <title>{% block title %}{% if title %}{{ title }} - {% endif %}Jared|Forsyth{% endblock %}</title>
-        {% block css %}
-        <link href="/media/index.css" rel="stylesheet"/>
-        {% endblock %}
-        {% block js %}
-        <script src="/media/index.js"></script>
-        {% endblock %}
-        {% block extrahead %}{% endblock %}
-        {% include "feedback/header.html" %}
-    </head>
-    <body>
-        <!--div id="title">
-            <h1>{% block h1 %}{% endblock %}</h1>
-        </div-->
-        <div id="main">
-            HELLO
-            <div id="smalltitle">
-                {% block smalltitle %}{% if title %}{{ title }}{% endif %}{% endblock %}
-            </div>
-            <div id="content">
-                {% block content %}
-                {% endblock %}
-            </div>
-        </div>
-        {% include "menu.html" %}
-        {% include "feedback/button.html" %}
-    </body>
-</html>
-
+{% extends "index.html" %}
