--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Jared|Forsyth{% endblock %}
 {% block smalltitle %}Jared|Forsyth{% endblock %}
 
-{% block bodyclasses %}home{% endblock %}
+{% block body_class %}home{% endblock %}
 
 {% block content %}
 
