--- a/templates/myprojects/view.html
+++ b/templates/myprojects/view.html
@@ -7,7 +7,7 @@
 
 {% block smalltitle %}{{ project.title }}{% endblock %}
 
-{% block bodyclasses %}projects{% endblock %}
+{% block body_class %}projects{% endblock %}
 
 {% block content %}
 <div class="meta">
