--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
         <link href="/media/index.css" rel="stylesheet"/>
         <link href="/media/menu.css" rel="stylesheet"/>
         <link href="/media/pygments.css" rel="stylesheet"/>
+        <link rel="icon" type="image/png" href="/media/favicon.png">
         {% endblock %}
 
         {% load markup %}
@@ -33,6 +34,13 @@
         </div>
         {% include "menu.html" %}
         {% include "feedback/button.html" %}
+
+        <div id="footer">
+            {% block footer %}
+                This site is open source. really? <a href="http://github.com/jabapyth/jfcom">really.</a>
+            {% endblock %}
+        </div>
+
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
