moving stuff around

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
 {% block title %}Page Not Found{%endblock %}
 {% block content_title %}Page not found{% endblock %}
