--- a/templates/base.html
+++ b/templates/base.html
@@ -1,1 +1,59 @@
-{% extends "index.html" %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+    <head>
+        <title>{% block title %}Jared|Forsyth{% endblock %}</title>
+        {% block css %}
+        <link href="/media/index.css" rel="stylesheet"/>
+        <link href="/media/menu.css" rel="stylesheet"/>
+        <link href="/media/pygments.css" rel="stylesheet"/>
+        <link rel="icon" type="image/png" href="/media/favicon.png">
+        {% endblock %}
+
+        {% block js %}
+        <script src="/media/index.js"></script>
+        {% endblock %}
+        {% block extra_head %}{% endblock %}
+        {% include "feedback/header.html" %}
+    </head>
+    <body  id="{% block body_id %}{% endblock %}" class="{% block body_class %}{{request.META.REQUEST_URI|slugify}}{% endblock %}">
+{% block body %}
+
+        <div id="main">
+            {% block notitle %}
+                <div id="smalltitle">
+                    {% block content_title %}{% endblock %}
+                </div>
+            {% endblock %}
+            <div id="content">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
+
+        {% include "menu.html" %}
+        {% include "feedback/button.html" %}
+
+        <div id="footer">
+            {% block footer %}
+                This site is open source. really? <a href="http://github.com/jabapyth/jfcom">really.</a>
+            {% endblock %}
+        </div>
+
+    {% block analytics %}
+        <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+        <script type="text/javascript">
+            try {
+                var pageTracker = _gat._getTracker("UA-7002862-4");
+                pageTracker._trackPageview();
+                } catch(err) {}
+        </script>
+    {% endblock %}
+
+{% endblock body %}
+    </body>
+</html>
+
