--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,10 +1,10 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
-{% block title %}{{flatpage.title}}{% endblock %}
-{% block smalltitle %}{{flatpage.title}}{% endblock %}
+{% block title %}{{ flatpage.title }}{% endblock %}
+{% block content_title %}{{ flatpage.title }}{% endblock %}
 
-{% load markup %}
+{% load blog %}
 
 {% block content %}
-{{flatpage.content|restructuredtext}}
+    {{ flatpage.content|markup:"rest" }}
 {% endblock %}
