--- a/templates/myprojects/index.html
+++ b/templates/myprojects/index.html
@@ -1,33 +1,30 @@
 {% extends "index.html" %}
 {% load markup %}
+{% load blog %}
 
 {% block css %}
-{{ block.super }}
-<link rel="stylesheet" href="/media/projects.css"/>
+    {{ block.super }}
+    <link rel="stylesheet" href="/media/projects.css"/>
 {% endblock %}
 
-{% block title %}Projects - {{block.super}}{%endblock %}
-{% block smalltitle %}projects{% endblock %}
+{% block title %}Projects - {{ block.super }}{%endblock %}
+{% block content_title %}projects{% endblock %}
 
-{% block bodyclasses %}projects{% endblock %}
+{% block body_class %}{{ block.super }} projects{% endblock %}
 
 {% block content %}
     {% for obj in projects %}
     <div class="project">
         <div class="project-image">
-            <a href="{{obj.get_absolute_url}}">
-                <img src="{{obj.image.url}}" title="{{obj.title}}"/>
+            <a href="{{ obj.get_absolute_url }}">
+                <img src="{{ obj.image.url }}" title="{{ obj.title }}"/>
             </a>
         </div>
         <div class="project-body">
-            <div class="name"><a href="{{obj.get_absolute_url}}">{{obj.title}}</a></div>
-            <div class="time">{{ obj.time|date:"M d, Y"}}</div>
-            <div class="desc">{{ obj.short_desc|restructuredtext }}</div>
+            <div class="name"><a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a></div>
+            <div class="time">{{ obj.time|date:"M d, Y" }}</div>
+            <div class="desc">{{ obj.short_desc|markup:"rest" }}</div>
         </div>
     </div>
     {% endfor %}
-
-
-
-
 {% endblock %}
