changed blog display date to publish

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -11,7 +11,7 @@
 
 <div class="meta">
     <div class="subtext">
-        <span class="small">{{ object.created|date:"M d, Y" }}</span>
+        <span class="small">{{ object.publish|date:"M d, Y" }}</span>
         <div class="subtext">
             by <a href="/about/{{ object.author }}">{{ object.author|title }}</a>
         </div>
