fix post paginate words

--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -24,9 +24,9 @@
         <div class="noposts">No Blog Posts Found</div>
     {% endfor %} 
     {% if has_previous %}
-        <a href="/blog/page/{{ previous }}/">&lt; previous</a>
+        <a href="/blog/page/{{ previous }}/">&lt; newer</a>
     {% endif %}
     {% if has_next %}
-        <a href="/blog/page/{{ next }}/">next &gt;</a>
+        <a href="/blog/page/{{ next }}/">older &gt;</a>
     {% endif %}
 {% endblock %}
