--- a/templates/myprojects/view.html
+++ b/templates/myprojects/view.html
@@ -5,7 +5,7 @@
 
 {% block title %}{{ project.title }}{% endblock %}
 
-{% block smalltitle %}{{ project.title }}{% endblock %}
+{% block content_title %}{{ project.title }}{% endblock %}
 
 {% block body_class %}{{ block.super }} projects{% endblock %}
 
