moving css files

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
     <head>
         <title>{% block title %}Jared|Forsyth{% endblock %}</title>
         {% block css %}
-        <link href="/media/index.css" rel="stylesheet"/>
-        <link href="/media/menu.css" rel="stylesheet"/>
-        <link href="/media/pygments.css" rel="stylesheet"/>
+        <link href="/media/css/index.css" rel="stylesheet"/>
+        <link href="/media/css/menu.css" rel="stylesheet"/>
+        <link href="/media/css/pygments.css" rel="stylesheet"/>
         <link rel="icon" type="image/png" href="/media/favicon.png">
         {% endblock %}
 
