adding rss feeds

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>{% block title %}Jared|Forsyth{% endblock %}</title>
+        <link rel="alternate" type="application/rss+xml" title="Jared|Forsyth" href="http://jaredforsyth.com/feeds/latest/" />
         {% block css %}
         <link href="/media/css/index.css" rel="stylesheet"/>
         <link href="/media/css/menu.css" rel="stylesheet"/>
