--- a/templates/myprojects/index.html
+++ b/templates/myprojects/index.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="/media/projects.css"/>
+    <link rel="stylesheet" href="/media/css/projects.css"/>
 {% endblock %}
 
 {% block title %}Projects - {{ block.super }}{%endblock %}
