--- a/media/css/index.css
+++ b/media/css/index.css
@@ -105,6 +105,18 @@ body.home #main {
     margin: 5px 0;
 }
 
+.post-body h1 {
+    font-size:1.5em;
+}
+
+.post-meta {
+    border-bottom: 1px solid #666;
+    border-top: 1px solid #666;
+    font-size: 80%;
+    padding-bottom: 2px;
+    text-transform: lowercase;
+}
+
 .post {
     padding-bottom:10px;
 }
