--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 <html>
     <head>
         <title>{% block title %}Jared|Forsyth{% endblock %}</title>
+        <link rel="openid.server" href="http://www.myopenid.com/server" />
+        <link rel="openid.delegate" href="http://jabapyth.myopenid.com/" />
         <link rel="alternate" type="application/rss+xml" title="Jared|Forsyth" href="http://jaredforsyth.com/feeds/latest/" />
         {% block css %}
         <link href="/media/css/index.css" rel="stylesheet"/>
@@ -48,7 +50,7 @@
         </script>
         <script type="text/javascript">
             try {
-                var pageTracker = _gat._getTracker("UA-7002862-4");
+                var pageTracker = _gat._getTracker("UA-7002862-1");
                 pageTracker._trackPageview();
                 } catch(err) {}
         </script>
