changing title styles

--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,29 +1,33 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 
 {% load markup %}
 {% load blog %}
 
 {% block title %}{{ block.super }} - Blog{% endblock %}
-{% block content_title %}blog{% endblock %}
+{% block content_title %}Blog{% endblock %}
 
 {% block content %} 
+    <div class="post-list">
     {% for object in object_list %} 
         <div class="post">
             <div class="post-title">
                 <a href="{{ object.get_absolute_url }}">{{ object.title }}</a>
-                <span class="small">{{ object.publish|date:"M d, Y" }}</span>
-            </div>
-            <div class="post-body">
-                {{ object.tease|markup:object.format }}
-                <a href="{{ object.get_absolute_url }}">[read more]</a>
             </div>
             <div class="subtext">
                 by <a href="/about/{{ object.author }}">{{ object.author|title }}</a>
+                <span class="small">on {{ object.publish|date:"M d, Y" }}</span>
+            </div>
+            <div class="post-body">
+                {{ object.tease|markup:object.format }}
+            </div>
+            <div class="read-more">
+                <a href="{{ object.get_absolute_url }}">[read more]</a>
             </div>
         </div>
     {% empty %} 
         <div class="noposts">No Blog Posts Found</div>
     {% endfor %} 
+    </div>
     {% if has_previous %}
         <a href="/blog/page/{{ previous }}/">&lt; newer</a>
     {% endif %}
