--- a/media/css/pygments.css
+++ b/media/css/pygments.css
@@ -1,4 +1,4 @@
-pre {
+pre, cite, tt.literal {
     padding: 5px;
     background-color: #eeffcc;
     color: #333333;
@@ -6,6 +6,14 @@ pre {
     border: 1px solid #ac9;
     border-left: none;
     border-right: none;
+}
+
+cite, tt.literal {
+    line-height 100%;
+    padding: 2px 5px;
+    font-family: monospace;
+    font-style:normal;
+    border-style:none;
 }
 
 div.codeblock {
