--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -27,6 +27,7 @@
 </div>
 
 <div class="post-comments">
+    <a name="comments"></a>
     <script>
         var disqus_identifier = "blog-{{ object.slug }}";
     </script>
