--- a/templates/500.html
+++ b/templates/500.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Page Not Found{%endblock %}
-{% block content_title %}Page not found{% endblock %}
+{% block title %}Error...{%endblock %}
+{% block content_title %}Error...{% endblock %}
 {% block content %}
-    Sorry, I couldn't find that page... Try <a href="/">the home page</a>
+    As this is a development blog, I'm sure you can understand that it's always in development. Apparently something went wrong &gt;.&lt;... Try <a href="/">the home page</a>
 {% endblock %}
 
