--- a/templates/feeds/latest_description.html
+++ b/templates/feeds/latest_description.html
@@ -1,4 +1,6 @@
 {% load blog %}
 
+This post <a href="{{obj.get_absolute_url}}">looks better on my blog</a> <br/>
+
 {{ obj.body|markup:obj.format }}
 
