--- a/templates/myprojects/view.html
+++ b/templates/myprojects/view.html
@@ -19,22 +19,61 @@
     </div>
     <div class="post-body">
         <div class="meta">
-        <div class="project-image">
-            <a href="{{ project.url }}">
-                <img src="{{ project.image.url }}" title="{{project.title}}"/>
-            </a>
+            <div class="project-image">
+                <a href="{{ project.url }}">
+                    <img src="{{ project.image.url }}" title="{{project.title}}"/>
+                </a>
+            </div>
+            {% if project.url %}
+                <a href="{{ project.url }}">{{ project.url }}</a>
+            {% endif %}
         </div>
-        {% if project.url %}
-            <a href="{{ project.url }}">{{ project.url }}</a>
-        {% endif %}
-    </div>
         {{ project.description|markup:project.format }}
         {% if project.source %}
             <br/><a href="{{ project.source.url }}">View source</a>
         {% endif %}
     </div>
+<div class="project-meta">
+    <a href="{{ object.get_absolute_url }}#disqus_thread">comments</a>
+</div>
+
+<div class="project-comments">
+    <script>
+        var disqus_identifier = "project-{{ project.slug }}";
+    </script>
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+    /**
+    * var disqus_identifier; [Optional but recommended: Define a unique
+    * identifier (e.g. post id or slug) for this thread] 
+    */
+    (function() {
+    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+    dsq.src = 'http://jaredforsyth.disqus.com/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript=jaredforsyth">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">project comments powered by <span class="logo-disqus">Disqus</span></a>
+
+</div>
     {% if user.is_staff %}
         <a href="/admin/myprojects/project/{{ project.id }}/">[edit]</a>
     {% endif %}
 </div>
+
+<script type="text/javascript">
+//<![CDATA[
+(function() {
+    var links = document.getElementsByTagName('a');
+    var query = '?';
+    for(var i = 0; i < links.length; i++) {
+        if(links[i].href.indexOf('#disqus_thread') >= 0) {
+            query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+        }
+    }
+    document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/jaredforsyth/get_num_replies.js' + query + '"></' + 'script>');
+})();
+//]]>
+</script>
 {% endblock %}
