--- a/templates/myprojects/view.html
+++ b/templates/myprojects/view.html
@@ -9,6 +9,18 @@
 
 {% block body_class %}{{ block.super }} projects{% endblock %}
 
+{% block left_of_content %}
+
+    {% for obj in ctx_projects|dictsortreversed:"time" %}
+    <div class="project-image">
+        <a href="{{ obj.get_absolute_url }}">
+            <img src="{{ obj.image.url }}" title="{{ obj.title }}"/>
+        </a>
+    </div>
+    {% endfor %}
+
+{% endblock %}
+
 {% block content %}
 <div class="meta">
     <div class="subtext">
