--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -23,6 +23,10 @@
 </div>
 
 <div class="post-meta">
+    <script>var addthis_config = { services_compact:'email,reddit,digg,twitter,google' }</script>
+    <!-- AddThis Button BEGIN -->
+    <a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4c42455027bd700f"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4c42455027bd700f"></script>
+    <!-- AddThis Button END -->
     [ <a href="{{ object.get_absolute_url }}">permalink</a> ] <a href="{{ object.get_absolute_url }}#disqus_thread">comments</a>
 </div>
 
