--- a/media/css/blog.css
+++ b/media/css/blog.css
@@ -21,11 +21,17 @@
 
 .post-body h1 {
     font-size:1.5em;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #666;
 }
 
 .post-body h2 {
     font-size:1.2em;
+    border-bottom: 1px solid #aaa;
+}
+
+.post-body h3 {
+    font-size:1.1em;
+    border-bottom: 1px dotted #ccc;
 }
 
 .post-body .codeblock {
