--- a/media/css/index.css
+++ b/media/css/index.css
@@ -1,4 +1,33 @@
 
+#im-gone {
+    background-color: #CCC;
+    border-bottom: 2px solid #333;
+    left: 0px;
+    padding: 8px 10px;
+    /*margin: -10px -10px 5px -10px;*/
+    position: fixed;
+    right: 0px;
+    top: 0px;
+    z-index: 1000;
+}
+
+body {
+    margin-top:40px;
+}
+
+#im-gone a {
+    color: white;
+    font-weight:bold;
+}
+
+#im-gone a:visited {
+    color: white;
+}
+
+body img {
+    border:none;
+}
+
 body.old {
     font-family:'Helvetica Neue', Arial, sans-serif;
     font-size:80%;
@@ -39,6 +68,7 @@ body {
     margin-left:-250px;
     width:500px;
     text-align:center;
+    background-color:white;
 }
 
 #smalltitle {
@@ -47,6 +77,7 @@ body {
     border-bottom: 1px solid #999;
     margin-bottom: 5px;
     padding-bottom: 3px;
+    background-color:white;
 }
 
 #smalltitle h2 {
@@ -68,12 +99,14 @@ body.post_archive_day #smalltitle {
     top:50%;
     margin-left:-250px;
     margin-top:-200px;
+    background-color:white;
 }
 
 #content {
     padding:15px;
     border:1px solid #999;
     margin-bottom:50px;
+    background-color:white;
 }
 
 a {
